<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:foregroundGravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/profile" />

        <TextView
            android:id="@+id/uploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload_image"
            android:textColor="#000000"
            android:textSize="18sp" />

        <View
            android:id="@+id/view"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="Your name"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_margin="10dp"
                android:gravity="center|center_horizontal"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view3"
                android:layout_width="70dp"
                android:layout_height="2dp"
                android:layout_margin="7dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Or with "
                android:textColor="#000000"
                android:textSize="14sp" />

            <View
                android:id="@+id/view4"
                android:layout_width="70dp"
                android:layout_height="2dp"
                android:layout_margin="7dp"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/facebookBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/facebook"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/google"
                app:cornerRadius="5dp" />
        </LinearLayout>
        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_weight="2"
            android:textSize="16sp"
            android:text="@string/login_account" />

    </LinearLayout>
</LinearLayout>